Add tests and remoute serve